Adicionando unid km e validacao de campos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<div class="row mt-4">
 			<div class="col-12">
 				<select class="form-select form-select-lg" aria-label="Default select example" id="select1">
-				  <option selected>SELECIONE ...</option>
+				  <option selected>SELECIONE...</option>
+				  <option value="0">KM</option>
 				  <option value="1">METROS</option>
 				  <option value="2">CENTÍMETROS</option>
 				  <option value="3">MILÍMETROS</option>
@@ -33,7 +34,8 @@
 		<div class="row mt-4">
 			<div class="col-12">
 				<select class="form-select form-select-lg" aria-label="Default select example" id="select2">
-				  <option selected>SELECIONE ...</option>
+				  <option selected>SELECIONE...</option>
+				  <option value="0">KM</option>
 				  <option value="1">METROS</option>
 				  <option value="2">CENTÍMETROS</option>
 				  <option value="3">MILÍMETROS</option>
